src/main/resources/public/css/main.css
body {
    padding: 0;
    margin: 0;
}

html, body {
    height: 100%;
}

button:focus {
  outline:0;
}


/* Map Content */
#content {
  height: 100%;
}

#mapid {
  height: calc(100% - 50px);
  position: fixed;
  top: 50px;
  bottom: 10px;
  right: 0;
  left: 0;
}

#markerdata-googlemap-directions a, #markerdata-googlemap-directions a:hover, #markerdata-googlemap-directions a:focus {
  color: #337ab7;
}

#sitemapid .leaflet-control-attribution {
  display: none;
}

#infomapid .leaflet-control-attribution {
  display: none;
}

/*
.pokenest-logo-img img {
  display: inline-block;
  margin-left: 14px;
  margin-bottom: 17px;
  margin-right: 2px;
}
*/

.pokenest-logo-txt {
  display: inline-block;
  padding-top: 8px;
  padding-bottom: 10px;
  padding-left: 20px;
  font-size: 25px; 
  font-family: 'Lato', serif;
  color: white;
}

.navbar-toggle {
  padding-top: 11px;
}

#access-password {
  width: 50%;
  margin-left: 20px;
  display: none;
}

#removeEntryBtn {
  display: none;
}

.signup-form-group {
  margin: 0px;
  padding: 0px;
}

a.pokenest-logo-txt, a.pokenest-logo-txt:hover, a.pokenest-logo-txt:focus {
  color: white;
}

a.pokenest-signup:hover, a.pokenest-signup:focus {
  color: white !important;
}

a.pokenest-login:hover, a.pokenest-login:focus {
  color: white !important;
}

/*a.pokenest-logo-img, a.pokenest-logo-img:hover, a.pokenest-logo-img:focus {
  color: white;
}*/

.leaflet-pulsing-icon {
  border-style: solid;
  border-width: 2px;
  border-color: white;
}

a:link {
    text-decoration: none;
}

hr {
    width: 100%;
    display: block;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    margin-left: auto;
    margin-right: auto;
    border: 0;
    border-bottom: solid 1px rgba(144,144,144,.25);
}

.modal-header img {
  float: left;
  width: 40px;
  height: 40px;
}

.modal-header h4 {
  position: relative;
  top: 8px;
}

.easy-button-button {
    margin: 0;
    padding: 0;
    padding-top: 1px;
}

.leaflet-bar button:first-of-type {
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.leaflet-bar button:last-of-type {
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}

.materal-icons {
    margin-top:  10px;
}

#sitemapid {
    z-index: 1;
    margin-left: auto;
    margin-right: auto;
}

#pokemon-typeahead {
    margin-bottom: 10px;
}

textarea:focus, input:focus{
    outline: none !important;
}

/* Remove Chrome focus effects */
*:focus {
    outline: none !important;
}

.tt-query {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-hint {
  color: #999;
}

.tt-menu {    /* used to be tt-dropdown-menu in older versions */

  width: 422px;
  margin-top: 4px;
  padding: 4px 0;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
          box-shadow: 0 5px 10px rgba(0,0,0,.2);
}

.tt-suggestion {

  padding: 3px 20px;
  line-height: 24px;
}

.twitter-typeahead, .tt-hint, .tt-input, .tt-menu { 
    width: 100%; 
}

.tt-suggestion.tt-cursor,.tt-suggestion:hover {
  color: #fff;
  background-color: #0097cf;
}

.tt-suggestion p {
  margin: 0;
}

